--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id "io.freefair.lombok" version "6.4.1"
 }
 
 group = 'com.example'
@@ -14,8 +15,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'javax.inject:javax.inject:1'
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+  	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.h2database:h2'
 }
 
 test {
